--- a/castcomsearch.ui
+++ b/castcomsearch.ui
@@ -15,10 +15,17 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <widget class="CSearchWidget" name="widget" native="true"/>
-   </item>
-   <item>
     <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="CSearchWidget" name="widget" native="true">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>10</height>
+        </size>
+       </property>
+      </widget>
+     </item>
      <item>
       <widget class="CNameMagView" name="treeView"/>
      </item>
