--- a/resource.qrc
+++ b/resource.qrc
@@ -86,5 +86,8 @@
         <file>res/sh_satellite.png</file>
         <file>res/sh_labels.png</file>
         <file>res/sh_legends.png</file>
+        <file>res/ico_aa.png</file>
+        <file>res/ico_ec.png</file>
+        <file>res/ico_eq.png</file>
     </qresource>
 </RCC>
